# Voicestream

./: Makefile  README.md  pyproject.toml
app/: socket_server.py
notebooks/: test.ipynb
src/: client.py  main.py  server.py
src/asr/: faster_whisper_asr.py
src/buffering_strategy/: buffering_strategies.py
