[tool.poetry]
name = "voicestreamai"
version = "0.1.0"
description = ""
authors = ["GPT-traders <crispin.nandhu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
websockets = "^12.0"
speechbrain = "^1.0.0"
faster-whisper = "^1.0.1"
asyncio = "^3.4.3"
sentence-transformers = "^2.7.0"
pyannote-audio = "^3.1.1"
python-dotenv = "^1.0.1"
torch = "^2.2.2"
torchaudio = "^2.2.2"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
